# hyprwobbly

./: .gitignore  CMakeLists.txt  Makefile  README.md  TransformerCompat.cpp  Wobbly.cpp  Wobbly.hpp  default.nix  flake.nix  globals.hpp  hyprpm.toml  main.cpp  shaders.hpp
